--- a/index.html
+++ b/index.html
@@ -52,214 +52,6 @@
       box-shadow: 0 0 10px rgba(255,215,122,.35);
       opacity:.7;
     }
-
-    @keyframes drift{
-      from{ transform: translate3d(0,0,0); }
-      to{ transform: translate3d(120px,-160px,0); }
-    }
-    @keyframes blink{
-      0%,100%{ opacity:.25; }
-      50%{ opacity:.95; }
-    }
-
-    header{
-      position:relative;
-      padding: clamp(32px, 6vw, 72px) 18px 22px;
-      text-align:center;
-    }
-
-    .tag{
-      display:inline-flex;
-      gap:10px;
-      align-items:center;
-      border:1px solid var(--line);
-      border-radius:999px;
-      padding:8px 14px;
-      background: rgba(15,43,29,.55);
-      box-shadow: 0 10px 30px var(--shadow);
-      backdrop-filter: blur(6px);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      font-size: 12px;
-      letter-spacing:.08em;
-      text-transform: uppercase;
-      color: var(--muted);
-    }
-
-    h1{
-      margin:18px 0 8px;
-      font-size: clamp(38px, 5vw, 60px);
-      font-weight: 750;
-      letter-spacing: .01em;
-      line-height: 1.02;
-      text-shadow: 0 10px 28px rgba(0,0,0,.35);
-    }
-
-    .wrap{
-      width:min(980px, 92vw);
-      margin: 0 auto 64px;
-    }
-
-    .card{
-      border: 1px solid var(--line);
-      border-radius: 22px;
-      background: linear-gradient(180deg, rgba(15,43,29,.78), rgba(11,36,24,.72));
-      box-shadow: 0 18px 50px var(--shadow);
-      backdrop-filter: blur(8px);
-      overflow:hidden;
-    }
-
-    .card-top{
-      padding: 18px 20px;
-      border-bottom: 1px solid var(--line);
-      background:
-        radial-gradient(800px 220px at 15% 20%, rgba(255,215,122,.16), transparent 60%),
-        radial-gradient(700px 220px at 80% 50%, rgba(127,214,159,.12), transparent 60%),
-        rgba(15,43,29,.35);
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:space-between;
-      align-items:center;
-      gap: 12px;
-    }
-
-    .pillrow{
-      display:flex;
-      flex-wrap:wrap;
-      gap:10px;
-      align-items:center;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--muted);
-      font-size: 13px;
-    }
-
-    .pill{
-      padding:6px 10px;
-      border:1px solid var(--line);
-      border-radius:999px;
-      background: rgba(7,22,15,.35);
-      white-space:nowrap;
-    }
-
-    /* Lanternlight Character Sheet Link */
-    .lantern-link{
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      padding:10px 14px;
-      border-radius:999px;
-      border:1px solid rgba(255,215,122,.35);
-      background:
-        radial-gradient(600px 120px at 20% 0%, rgba(255,215,122,.14), transparent 60%),
-        rgba(15,43,29,.55);
-      color: var(--ink);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      font-size: 13px;
-      letter-spacing:.04em;
-      text-decoration:none;
-      box-shadow:
-        inset 0 1px 0 rgba(255,255,255,.12),
-        0 10px 28px var(--shadow);
-      transition: transform .15s ease, box-shadow .15s ease, background .15s ease;
-    }
-
-    .lantern-link:hover{
-      transform: translateY(-1px);
-      background:
-        radial-gradient(600px 120px at 20% 0%, rgba(255,215,122,.22), transparent 60%),
-        rgba(15,43,29,.65);
-      box-shadow:
-        inset 0 1px 0 rgba(255,255,255,.18),
-        0 14px 36px rgba(0,0,0,.45);
-    }
-  </style>
-</head>
-
-<body>
-  <div class="fireflies" aria-hidden="true"></div>
-
-  <header>
-    <div class="tag">🕯️ Lanternlight Trail • Player Rules</div>
-    <h1>Lanternlight Trail</h1>
-  </header>
-
-  <main class="wrap">
-    <section class="card">
-      <div class="card-top">
-        <div class="pillrow">
-          <span class="pill">🎲 <strong>Roll:</strong> d20 + stat</span>
-          <span class="pill">🕯️ <strong>Lanternlight:</strong> shared 6</span>
-          <span class="pill">🌿 <strong>Tone:</strong> gentle travel & return</span>
-        </div>
-
-        <div class="pillrow">
-          <span class="pill">Use cozy details.</span>
-          <span class="pill">Help is always a choice.</span>
-        </div>
-
-        <a href="./character-sheet/" class="lantern-link">
-          📄 Character Sheet
-        </a>
-      </div>
-
-      <!-- card-body remains unchanged -->
-    </section>
-  </main>
-</body>
-</html>
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lanternlight Trail • Player Rules</title>
-  <meta name="description" content="Lanternlight Trail - Cozy one-shot player rules" />
-  <style>
-    :root{
-      --bg0:#07160f;
-      --bg1:#0b2217;
-      --ink:#f3f7f0;
-      --muted:#cfe1d3;
-      --moss:#7fd69f;
-      --leaf:#4ed39f;
-      --bark:#d7b88a;
-      --glow:#ffd77a;
-      --paper:#0f2b1d;
-      --paper2:#0b2418;
-      --line:rgba(255,255,255,.12);
-      --shadow: rgba(0,0,0,.35);
-    }
-
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: ui-serif, "Georgia", "Times New Roman", serif;
-      color:var(--ink);
-      background:
-        radial-gradient(1200px 700px at 20% -10%, rgba(255,215,122,.18), transparent 60%),
-        radial-gradient(900px 600px at 90% 15%, rgba(127,214,159,.14), transparent 55%),
-        radial-gradient(800px 520px at 40% 110%, rgba(78,211,159,.10), transparent 60%),
-        linear-gradient(180deg, var(--bg0), var(--bg1));
-      min-height:100vh;
-      overflow-x:hidden;
-    }
-
-    /* Soft fireflies */
-    .fireflies{
-      position:fixed;
-      inset:0;
-      pointer-events:none;
-      opacity:.85;
-      filter: blur(.1px);
-    }
-    .fireflies i{
-      position:absolute;
-      width:6px; height:6px;
-      border-radius:999px;
-      background: radial-gradient(circle, rgba(255,215,122,.95) 0%, rgba(255,215,122,.15) 55%, transparent 70%);
-      animation: drift 14s linear infinite, blink 2.8s ease-in-out infinite;
-      box-shadow: 0 0 10px rgba(255,215,122,.35);
-      opacity:.7;
-    }
     .fireflies i:nth-child(3n){ width:5px;height:5px; animation-duration:18s, 3.2s; }
     .fireflies i:nth-child(4n){ width:7px;height:7px; animation-duration:22s, 2.3s; }
     .fireflies i:nth-child(5n){ animation-duration:26s, 4.1s; }
@@ -477,6 +269,41 @@
       background: linear-gradient(90deg, transparent, rgba(255,215,122,.35), rgba(127,214,159,.25), transparent);
       margin: 18px 0;
     }
+   /* Lanternlight Character Sheet Link */
+    .lantern-link{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding:10px 14px;
+      border-radius:999px;
+      border:1px solid rgba(255,215,122,.35);
+      background:
+        radial-gradient(600px 120px at 20% 0%, rgba(255,215,122,.14), transparent 60%),
+        rgba(15,43,29,.55);
+      color: var(--ink);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-size: 13px;
+      letter-spacing:.04em;
+      text-decoration:none;
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,.12),
+        0 10px 28px var(--shadow);
+      transition: transform .15s ease, box-shadow .15s ease, background .15s ease;
+      white-space: nowrap;
+    }
+    .lantern-link:hover{
+      transform: translateY(-1px);
+      background:
+        radial-gradient(600px 120px at 20% 0%, rgba(255,215,122,.22), transparent 60%),
+        rgba(15,43,29,.65);
+      box-shadow:
+        inset 0 1px 0 rgba(255,255,255,.18),
+        0 14px 36px rgba(0,0,0,.45);
+    }
+    .lantern-link:active{
+      transform: translateY(0);
+      box-shadow: inset 0 2px 6px rgba(0,0,0,.4);
+    }
   </style>
 </head>
 
@@ -519,6 +346,7 @@
           <span class="pill">Help is always a choice.</span>
         </div>
 
+                <a href="./character-sheet/" class="lantern-link">📄 Character Sheet</a>
 
       </div>
 
