--- a/LLRules/index.html
+++ b/LLRules/index.html
@@ -346,7 +346,7 @@
           <span class="pill">Help is always a choice.</span>
         </div>
 
-        <a href="/LLRules/character-sheet/" class="lantern-link">📄 Character Sheet</a>
+        <a href="https://alexgram0911.github.io/character-sheet/" class="lantern-link">📄 Character Sheet</a>
       </div>
 
       <div class="card-body">
