--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -405,31 +405,31 @@
           <div class="label">Stats (assign +2, +1, 0, −1)</div>
           <div class="statbar">
             <div class="stat">
-              <div class="statname">Trail</div>
+              <div class="statname">Vector</div>
               <div class="dial">
                 <div class="circle"></div>
                 <div class="hint">Paths, navigation, movement under pressure.</div>
               </div>
             </div>
             <div class="stat">
-              <div class="statname">Care</div>
+              <div class="statname">Triage</div>
               <div class="dial">
                 <div class="circle"></div>
                 <div class="hint">Repair, tending, keeping others steady.</div>
               </div>
             </div>
             <div class="stat">
-              <div class="statname">Clever</div>
+              <div class="statname">Signal</div>
               <div class="dial">
                 <div class="circle"></div>
                 <div class="hint">Noticing, puzzles, talking.</div>
               </div>
             </div>
             <div class="stat">
-              <div class="statname">Endure</div>
+              <div class="statname">Grit</div>
               <div class="dial">
                 <div class="circle"></div>
-                <div class="hint">Cold, fear, fatigue, grit.</div>
+                <div class="hint">Cold, fear, fatigue.</div>
               </div>
             </div>
           </div>
@@ -452,12 +452,12 @@
           <div class="tracks">
             <div class="track">
               <div class="track-label">
-                <strong>LIGHT</strong> is personal · start at <strong>6–8</strong>
+                <strong>LIGHT</strong> is personal · start at <strong>6</strong>
               </div>
               <div class="boxes" aria-hidden="true">
                 <!-- 10 boxes -->
                 <span></span><span></span><span></span><span></span><span></span>
-                <span></span><span></span><span></span><span></span><span></span>
+                <span></span><span></span><span></span>
               </div>
             </div>
 
