--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -376,7 +376,7 @@
         <!-- IDENTITY -->
         <div class="row2">
           <div class="box">
-            <div class="label">Name</div>
+            <div class="label">Designation/Call Sign</div>
             <div class="line"></div>
           </div>
           <div class="box">
