--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -377,7 +377,7 @@
           <div class="title">Fractured Light</div>
           <div class="subtitle">Character Sheet • pressure, cost, and no return</div>
         </div>
-        <div class="lantern" aria-hidden="true"></div>
+        <div class="lantern"><span></span></div>
         <div class="tag">FL-01</div>
       </div>
 
