--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -489,7 +489,7 @@
               <div class="boxes" aria-hidden="true">
                 <!-- 10 boxes -->
                 <span></span><span></span><span></span><span></span><span></span>
-                <span></span><span></span><span></span>
+                <span></span><span></span>
               </div>
             </div>
 
