--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -489,7 +489,7 @@
               <div class="boxes" aria-hidden="true">
                 <!-- 10 boxes -->
                 <span></span><span></span><span></span><span></span><span></span>
-                <span></span><span></span>
+                <span></span>
               </div>
             </div>
 
@@ -500,7 +500,7 @@
               <div class="boxes turnboxes" aria-hidden="true">
                 <!-- 7 dots (0..6) -->
                 <span title="0"></span><span title="1"></span><span title="2"></span><span title="3"></span>
-                <span title="4"></span><span title="5"></span><span title="6"></span>
+                <span title="4"></span><span title="5"></span>
               </div>
             </div>
           </div>
