--- a/fractured-light/index.html
+++ b/fractured-light/index.html
@@ -352,7 +352,7 @@
           <span class="pill">☣️ <strong>TURN:</strong> 0 → 6 escalation</span>
         </div>
         <div class="pillrow">
-          <span class="pill">Most success has a cost.</span>
+          <span class="pill">Failure has a cost.</span>
           <span class="pill">Nothing resets.</span>
         </div>
 
