--- a/fractured-light/character-sheet/index.html
+++ b/fractured-light/character-sheet/index.html
@@ -423,11 +423,11 @@
         <!-- TRAITS -->
         <div class="row2">
           <div class="box">
-            <div class="label">Good At</div>
+            <div class="label">Capability</div>
             <div class="line"></div>
           </div>
           <div class="box">
-            <div class="label">Afraid Of</div>
+            <div class="label">Liability</div>
             <div class="line"></div>
           </div>
         </div>
