--- a/fractured-light/index.html
+++ b/fractured-light/index.html
@@ -366,7 +366,7 @@
           you’re in does not forgive the way the Lanternlit Trail did.
         </p>
         <ul class="list">
-          <li><strong>Role</strong> (Biochemist, Engineer, Survivor, Reclaimer)</li>
+          <li><strong>Role</strong> (Biochemist, Engineer, Operative, Reclaimer, etc.)</li>
           <li>Something you are <strong>good at</strong></li>
           <li>Something you are <strong>afraid of</strong></li>
         </ul>
